[package]
name = "sok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.6"
bevy_render = "0.6"
bevy_pbr = "0.6"
bevy_sprite = "0.6"
bevy_text = "0.6"
bevy_ui = "0.6"
quick-xml = "0.22.0"
serde_json = "1.0"
serde = { version = "1.0.126", features = ["derive"] }
clap = { version = "2.33.3", features = ["yaml"] }
rustls = "0.18"
rand = "0.8.3"
pathfinding = "3.0.5"
